--- a/Homework_for_3_seminars.html
+++ b/Homework_for_3_seminars.html
@@ -10,23 +10,23 @@
 
 <body>
     <script language='JavaScript'>
-// // 1 задача:
-//         let name = prompt('Введите Ваше имя:');
-//         alert(`Привет, ${name}`);
-// // 2 задача:
-//         let age = prompt('Введите Ваш возраст:');
-//         switch (age) {
-//             case '17':
-//                 alert('Мало');
-//                 break;
-//             case '18':
-//                 alert('Да');
-//                 break;
-//             case '19':
-//                 alert('Много');
-//             default:
-//                 alert('Нет');
-//         }
+// 1 задача:
+        let name = prompt('Введите Ваше имя:');
+        alert(`Привет, ${name}`);
+// 2 задача:
+        let age = prompt('Введите Ваш возраст:');
+        switch (age) {
+            case '17':
+                alert('Мало');
+                break;
+            case '18':
+                alert('Да');
+                break;
+            case '19':
+                alert('Много');
+            default:
+                alert('Нет');
+        }
     </script>
 <!-- 3 задача: -->
     <section class="wrapper">
